--- a/i/misc/paragraphs.html
+++ b/i/misc/paragraphs.html
@@ -9,6 +9,16 @@
 
     <h1>paragraphs</h1>
     <img src="/mute-ante/i/misc/workbench.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
+    <h2>16/9/2022 20:21</h2>
+        <p>After snooping around for some cool websites to put in my <a href="/mute-ante/i/buttons">buttons</a> page and
+            looking at other's websites, i think my website is lacking animation.
+        <br>Things like gifs, they make the experience more... interesting than just boring, still text.
+        <br>I'm working on adding more drawings to <a href="/mute-ante/i/handdrawn">handdrawn</a>- it'll probably be done by tomorrow - 
+        and one of the things i'm adding are animated buttons to different categories (just 3 though).
+        <br>Also on the plans is adding more drawings to the other misc pages like this one and maybe even animate them.
+        <br>I think this is a big step on making my site look less... boring i guess.
+    </p>
+
     <h2>15/9/2022 22:05</h2>
         <p>I don't know if i should keep the entrance to here a bit hidden
         <br>or make it more obvious.
@@ -17,7 +27,6 @@
         <br><b>(22:15)</b> I made the entrance more obvious now.
         </p>
 
-    
     <h2>13/9/2022 15:43</h2>
         <p>I now realize i'm spending a lot more time here in the basement than upstairs.
         <br>But i guess that's a good thing! I'm being a lot more creative here, where i'm not bound to just one style.
