--- a/i/doodlestest.html
+++ b/i/doodlestest.html
@@ -3,10 +3,10 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{handdrawn}</title>
+        <title>{doodles}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/mute-ante/i/handdrawn/background.jpg);
+        body{background-image:url(/mute-ante/i/doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             padding-top:20px;}
@@ -15,11 +15,11 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
-        <img src="/mute-ante/i/handdrawn/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
+        <img src="/mute-ante/i/doodles/doodles.gif" alt="{doodles}" style="height:120px;">
+        <img src="/mute-ante/i/doodles/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <img src="/mute-ante/i/handdrawn/people.gif" alt="people button" style="border: solid #05a1fc 5px">
-        <img src="/mute-ante/i/handdrawn/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px">
-        <img src="/mute-ante/i/handdrawn/etc.gif" alt="etc button" style="border: solid #ffb400 5px">
+        <img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px">
+        <img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px">
+        <img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px">
     <br><a href="/mute-ante/i">go back</a>
     </body>
