--- a/i/doodlestest.html
+++ b/i/doodlestest.html
@@ -23,7 +23,7 @@
         <img src="/mute-ante/i/doodles/doodles.gif" alt="{doodles}" style="height:120px;">
         <img src="/mute-ante/i/doodles/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <a href="/mute-ante/i/doodles/peopletest"><img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
+        <a href="/mute-ante/i/doodles/peopletest" class="button"><img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
         <img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m">
         <img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y">
     <br><a href="/mute-ante/i">go back</a>
