--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{doodles}</title>
+        <title>{people}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-image:url(/mute-ante/i/doodles/background.jpg);
@@ -15,6 +15,9 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;">
+        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;"><br>
+        <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:120px;">
+        <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:120px;">
+        <img src="/mute-ante/i/doodles/other guy.jpg" alt="other guy" style="width:120px;">
     <br><a href="/mute-ante/i/doodles">go back</a>
     </body>
