--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -11,13 +11,14 @@
             background-size:cover;
             padding-top:20px;}
         a, a::after, a::before{color: #080808}
+        img{border: solid #05a1fc 2px}
+        .header{border: solid 0px}
     </style>
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;"><br>
+        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;" class="header"><br>
         <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:120px;">
         <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:120px;">
-        <img src="/mute-ante/i/doodles/other guy.jpg" alt="other guy" style="width:120px;">
     <br><a href="/mute-ante/i/doodles">go back</a>
     </body>
