--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -13,13 +13,14 @@
         a, a::after, a::before{color: #080808}
         img{border: solid #05a1fc 2px}
         .header{border: solid 0px}
-        .drawings{line-height:0;column-count: 5; column-gap:5px}
+        #drawings{line-height:0;column-count: 4; column-gap:7px}
+        #drawings img{margin-bottom: 7px;}
     </style>
     </head>
 
     <body>
         <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;" class="header"><br>
-        <div class="drawings">
+        <div id="drawings" width="650px">
         <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:100%;">
         <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:100%;">
         <img src="/mute-ante/i/doodles/aslep.jpg" alt="aslep" style="width:100%;">
