--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -3,11 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>nimi mute: jan</title>
-        <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
-    <body><div class="container">
-
-        <h1>jan</h1><hr>
+    <body><nav><div style="margin: 20px">
+        <a href="/website">home</a><br>
+        <br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
+        <br>
+        <a href="/website/nimi-mute">nimi mute</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/doodles">doodles</a><br>
+        <a href="/website/misc">misc</a><br>
+        <br>
+        <a href="/website/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
+    </div></nav>
+    <div class="main">
+        <h1>jan</h1>
         <p style="padding: 10px">
         jan li suli.
         <br>jan li ken sona e ijo mute.
@@ -68,7 +82,5 @@
         <br>toki la o pona.
         <br>o jan pona.
         </p>
-    <a></a>
-    <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
