--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>nimi mute: len pi laso telo</title>
-        <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
-    <body>
-        <div class="container">
+    <body><nav><div style="margin: 20px">
+        <a href="/website">home</a><br>
+        <br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
+        <br>
+        <a href="/website/nimi-mute">nimi mute</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/doodles">doodles</a><br>
+        <a href="/website/misc">misc</a><br>
+        <br>
+        <a href="/website/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
+    </div></nav>
+        <div class="main">
 
         <h1>len pi laso telo</h1><hr>
         <p style="padding: 10px">
@@ -98,6 +112,5 @@
         <br>ni la toki mi li pini.
         <br>ken la, mi toki lon suno kama.
         <br>mi tawa a...</p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
