--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -3,9 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>nimi mute: tomo ni</title>
-        <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style>     <body>
-        <div class="centered-container">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style>     
+        <body><nav><div style="margin: 20px">
+            <a href="/website">home</a><br>
+            <br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
+            <br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
+            <br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
+        </div></nav>
+        <div class="main">
 
         <h1>tomo ni</h1><hr>
         <p style="padding: 10px">
@@ -26,6 +41,5 @@
         <br>mi ken lukin e telo suli kin
         <br>tomo ni li pona mute tawa mi a
         </p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
